erDiagram
    ATLAS_EMPLOYEES ||--o{ ATLAS_DEPARTMENTS : "belongs to"
    ATLAS_EMPLOYEES ||--o{ ATLAS_LOCATIONS : "works at"
    ATLAS_EMPLOYEES ||--o{ ATLAS_EMPLOYEES : "reports to"
    ATLAS_DEPARTMENTS ||--o{ ATLAS_DEPARTMENTS : "parent of"

    ATLAS_PURCHASE_ORDERS ||--o{ ATLAS_SUPPLIERS : "from"
    ATLAS_AP_INVOICES ||--o{ ATLAS_SUPPLIERS : "from"

    ATLAS_DOCUMENT_CHUNKS ||--o{ ATLAS_DOCUMENTS : "part of"

    ATLAS_EMPLOYEES {
        NUMBER EMPLOYEE_ID PK
        VARCHAR2 EMPLOYEE_NUMBER
        VARCHAR2 FULL_NAME
        VARCHAR2 JOB_TITLE
        NUMBER DEPARTMENT_ID FK
        NUMBER LOCATION_ID FK
        DATE HIRE_DATE
        VARCHAR2 ASSIGNMENT_STATUS
        NUMBER MANAGER_ID FK
        VARCHAR2 DATA_CLASSIFICATION
        TIMESTAMP LAST_SYNC_DATE
    }

    ATLAS_DEPARTMENTS {
        NUMBER DEPARTMENT_ID PK
        VARCHAR2 DEPARTMENT_NAME
        NUMBER PARENT_DEPARTMENT_ID FK
        NUMBER MANAGER_ID
        VARCHAR2 DATA_CLASSIFICATION
        TIMESTAMP LAST_SYNC_DATE
    }

    ATLAS_LOCATIONS {
        NUMBER LOCATION_ID PK
        VARCHAR2 LOCATION_NAME
        VARCHAR2 ADDRESS_LINE_1
        VARCHAR2 CITY
        VARCHAR2 REGION
        VARCHAR2 COUNTRY
        VARCHAR2 DATA_CLASSIFICATION
        TIMESTAMP LAST_SYNC_DATE
    }

    ATLAS_SUPPLIERS {
        NUMBER SUPPLIER_ID PK
        VARCHAR2 SUPPLIER_NAME
        VARCHAR2 SUPPLIER_NUMBER
        VARCHAR2 SUPPLIER_TYPE
        VARCHAR2 TAX_REGISTRATION_NUMBER
        VARCHAR2 STATUS
        VARCHAR2 DATA_CLASSIFICATION
        TIMESTAMP LAST_SYNC_DATE
    }

    ATLAS_PURCHASE_ORDERS {
        NUMBER PO_ID PK
        VARCHAR2 PO_NUMBER
        NUMBER SUPPLIER_ID FK
        VARCHAR2 CURRENCY_CODE
        NUMBER TOTAL_AMOUNT
        VARCHAR2 STATUS
        DATE APPROVED_DATE
        VARCHAR2 CREATED_BY
        DATE CREATION_DATE
        VARCHAR2 DATA_CLASSIFICATION
        TIMESTAMP LAST_SYNC_DATE
    }

    ATLAS_AP_INVOICES {
        NUMBER INVOICE_ID PK
        VARCHAR2 INVOICE_NUMBER
        NUMBER SUPPLIER_ID FK
        DATE INVOICE_DATE
        NUMBER INVOICE_AMOUNT
        NUMBER AMOUNT_PAID
        VARCHAR2 PAYMENT_STATUS
        VARCHAR2 CURRENCY_CODE
        DATE DUE_DATE
        VARCHAR2 DATA_CLASSIFICATION
        TIMESTAMP LAST_SYNC_DATE
    }

    ATLAS_GL_BALANCES {
        NUMBER BALANCE_ID PK
        NUMBER LEDGER_ID
        VARCHAR2 ACCOUNT_CODE
        VARCHAR2 ACCOUNT_DESCRIPTION
        VARCHAR2 PERIOD_NAME
        VARCHAR2 CURRENCY_CODE
        NUMBER PERIOD_NET_DR
        NUMBER PERIOD_NET_CR
        NUMBER BEGIN_BALANCE_DR
        NUMBER BEGIN_BALANCE_CR
        VARCHAR2 DATA_CLASSIFICATION
        TIMESTAMP LAST_SYNC_DATE
    }

    ATLAS_DOCUMENTS {
        NUMBER DOCUMENT_ID PK
        VARCHAR2 DOCUMENT_NAME
        VARCHAR2 DOCUMENT_TYPE
        VARCHAR2 SOURCE_SYSTEM
        VARCHAR2 OBJECT_STORAGE_PATH
        TIMESTAMP CREATED_DATE
        TIMESTAMP LAST_UPDATED_DATE
    }

    ATLAS_DOCUMENT_CHUNKS {
        NUMBER CHUNK_ID PK
        NUMBER DOCUMENT_ID FK
        CLOB CHUNK_TEXT
        NUMBER CHUNK_SEQUENCE
        VECTOR EMBEDDING
        TIMESTAMP CREATED_DATE
    }

    ATLAS_AUDIT_LOG {
        NUMBER LOG_ID PK
        VARCHAR2 EVENT_TYPE
        VARCHAR2 USER_ID
        VARCHAR2 CLIENT_IP
        VARCHAR2 RESOURCE_TYPE
        VARCHAR2 ACTION
        CLOB DETAILS
        VARCHAR2 SUCCESS
        VARCHAR2 ERROR_MESSAGE
        TIMESTAMP CREATED_DATE
    }
